lib/parser.js
module.exports = (function() {
  "use strict";

  /*
   * Generated by PEG.js 0.9.0.
   *
   * http://pegjs.org/
   */

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function peg$SyntaxError(message, expected, found, location) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.location = location;
    this.name     = "SyntaxError";

    if (typeof Error.captureStackTrace === "function") {
      Error.captureStackTrace(this, peg$SyntaxError);
    }
  }

  peg$subclass(peg$SyntaxError, Error);

  function peg$parse(input) {
    var options = arguments.length > 1 ? arguments[1] : {},
        parser  = this,

        peg$FAILED = {},

        peg$startRuleFunctions = { Start: peg$parseStart },
        peg$startRuleFunction  = peg$parseStart,

        peg$c0 = function(doc) { return doc; },
        peg$c1 = { type: "any", description: "any character" },
        peg$c2 = { type: "other", description: "whitespace" },
        peg$c3 = "\t",
        peg$c4 = { type: "literal", value: "\t", description: "\"\\t\"" },
        peg$c5 = "\x0B",
        peg$c6 = { type: "literal", value: "\x0B", description: "\"\\x0B\"" },
        peg$c7 = "\f",
        peg$c8 = { type: "literal", value: "\f", description: "\"\\f\"" },
        peg$c9 = " ",
        peg$c10 = { type: "literal", value: " ", description: "\" \"" },
        peg$c11 = "\xA0",
        peg$c12 = { type: "literal", value: "\xA0", description: "\"\\xA0\"" },
        peg$c13 = "\uFEFF",
        peg$c14 = { type: "literal", value: "\uFEFF", description: "\"\\uFEFF\"" },
        peg$c15 = /^[\n\r\u2028\u2029]/,
        peg$c16 = { type: "class", value: "[\\n\\r\\u2028\\u2029]", description: "[\\n\\r\\u2028\\u2029]" },
        peg$c17 = { type: "other", description: "end of line" },
        peg$c18 = "\n",
        peg$c19 = { type: "literal", value: "\n", description: "\"\\n\"" },
        peg$c20 = "\r\n",
        peg$c21 = { type: "literal", value: "\r\n", description: "\"\\r\\n\"" },
        peg$c22 = "\r",
        peg$c23 = { type: "literal", value: "\r", description: "\"\\r\"" },
        peg$c24 = "\u2028",
        peg$c25 = { type: "literal", value: "\u2028", description: "\"\\u2028\"" },
        peg$c26 = "\u2029",
        peg$c27 = { type: "literal", value: "\u2029", description: "\"\\u2029\"" },
        peg$c28 = { type: "other", description: "comment" },
        peg$c29 = function() { return { type: 'comment', value: text() }; },
        peg$c30 = "/*",
        peg$c31 = { type: "literal", value: "/*", description: "\"/*\"" },
        peg$c32 = "*/",
        peg$c33 = { type: "literal", value: "*/", description: "\"*/\"" },
        peg$c34 = ";",
        peg$c35 = { type: "literal", value: ";", description: "\";\"" },
        peg$c36 = "//",
        peg$c37 = { type: "literal", value: "//", description: "\"//\"" },
        peg$c38 = { type: "other", description: "digit" },
        peg$c39 = /^[0-9]/,
        peg$c40 = { type: "class", value: "[0-9]", description: "[0-9]" },
        peg$c41 = { type: "other", description: "hex digit" },
        peg$c42 = /^[0-9a-fA-F]/,
        peg$c43 = { type: "class", value: "[0-9a-fA-F]", description: "[0-9a-fA-F]" },
        peg$c44 = { type: "other", description: "decimal number literal" },
        peg$c45 = /^[\-]/,
        peg$c46 = { type: "class", value: "[-]", description: "[-]" },
        peg$c47 = function(neg, digits) {
              return {
                type: 'number',
                value: parseInt((!neg ? '' : '-') + digits.join(''), 10)
              }
            },
        peg$c48 = { type: "other", description: "positive decimal number literal" },
        peg$c49 = function(digits) { return { type: 'number', value: parseInt(text(), 10) } },
        peg$c50 = "$",
        peg$c51 = { type: "literal", value: "$", description: "\"$\"" },
        peg$c52 = "0x",
        peg$c53 = { type: "literal", value: "0x", description: "\"0x\"" },
        peg$c54 = function(hexits) { return { type: 'number', value: parseInt(hexits.join(''), 16) } },
        peg$c55 = { type: "other", description: "number literal" },
        peg$c56 = function(n) { return { type: 'number', value: n.value }; },
        peg$c57 = { type: "other", description: "positive number literal" },
        peg$c58 = /^[a-zA-Z\-_]/,
        peg$c59 = { type: "class", value: "[a-zA-Z\\-_]", description: "[a-zA-Z\\-_]" },
        peg$c60 = function(name) { return name.join('').toLowerCase(); },
        peg$c61 = { type: "other", description: "directive" },
        peg$c62 = "#",
        peg$c63 = { type: "literal", value: "#", description: "\"#\"" },
        peg$c64 = /^[^\n\r]/,
        peg$c65 = { type: "class", value: "[^\\n\\r]", description: "[^\\n\\r]" },
        peg$c66 = function(name, a) { return a.join(''); },
        peg$c67 = function(name, arg) { return { type: 'directive', name: name, arg: arg } },
        peg$c68 = { type: "other", description: "instrument name" },
        peg$c69 = /^[a-z]/,
        peg$c70 = { type: "class", value: "[a-z]", description: "[a-z]" },
        peg$c71 = /^[a-zA-Z0-9\-_]/,
        peg$c72 = { type: "class", value: "[a-zA-Z0-9\\-_]", description: "[a-zA-Z0-9\\-_]" },
        peg$c73 = function(first, rest) { return first + rest.join('') },
        peg$c74 = function(chars) { return chars.join('') },
        peg$c75 = ":",
        peg$c76 = { type: "literal", value: ":", description: "\":\"" },
        peg$c77 = function(name, value) { return { type: 'parameter', name: name, value: value } },
        peg$c78 = "{",
        peg$c79 = { type: "literal", value: "{", description: "\"{\"" },
        peg$c80 = ",",
        peg$c81 = { type: "literal", value: ",", description: "\",\"" },
        peg$c82 = function(first, p) { return p },
        peg$c83 = "}",
        peg$c84 = { type: "literal", value: "}", description: "\"}\"" },
        peg$c85 = function(first, rest) {
              var body = {};
              if (first) body[first.name] = first.value;
              for (var i = 0; i < rest.length; i++) {
                body[rest[i].name] = rest[i].value;
              }
              return body;
            },
        peg$c86 = function(name, first, i) { return i },
        peg$c87 = function(name, first, rest) {
              return {
                type: 'instrument',
                name: name,
                bodies: [first].concat(rest)
              }
            },
        peg$c88 = { type: "other", description: "command" },
        peg$c89 = /^[A-Z]/,
        peg$c90 = { type: "class", value: "[A-Z]", description: "[A-Z]" },
        peg$c91 = function(channels, s) { return s },
        peg$c92 = function(channels, sequence) {
              return {
                type: 'command',
                channels: channels,
                sequence: optionalList(sequence)
              }
            },
        peg$c93 = /^[cdefgab]/,
        peg$c94 = { type: "class", value: "[cdefgab]", description: "[cdefgab]" },
        peg$c95 = "+",
        peg$c96 = { type: "literal", value: "+", description: "\"+\"" },
        peg$c97 = "-",
        peg$c98 = { type: "literal", value: "-", description: "\"-\"" },
        peg$c99 = ".",
        peg$c100 = { type: "literal", value: ".", description: "\".\"" },
        peg$c101 = function(note, accidental, length, dots) {
              return {
                type: 'note',
                note: note,
                accidental: accidental,
                length: (length && length.value),
                dots: dots.length,
              }
            },
        peg$c102 = ">",
        peg$c103 = { type: "literal", value: ">", description: "\">\"" },
        peg$c104 = function() { return { type: 'inc_octave' } },
        peg$c105 = "<",
        peg$c106 = { type: "literal", value: "<", description: "\"<\"" },
        peg$c107 = function() { return { type: 'dec_octave' } },
        peg$c108 = "@",
        peg$c109 = { type: "literal", value: "@", description: "\"@\"" },
        peg$c110 = function(inst) {
              var value;
              if (typeof inst === 'string') {
                value = { type: 'instrument_name', value: inst };
              } else {
                value = { type: 'anonymous_instrument', value: inst };
              }
              return { type: 'set_instrument', value: value };
            },
        peg$c111 = "t",
        peg$c112 = { type: "literal", value: "t", description: "\"t\"" },
        peg$c113 = function(num) { return { type: 'set_tempo', value: num.value }; },
        peg$c114 = "l",
        peg$c115 = { type: "literal", value: "l", description: "\"l\"" },
        peg$c116 = function(num) { return { type: 'set_note_length', value: num.value }; },
        peg$c117 = "q",
        peg$c118 = { type: "literal", value: "q", description: "\"q\"" },
        peg$c119 = function(num) { return { type: 'set_quantize', value: num.value }; },
        peg$c120 = "Q",
        peg$c121 = { type: "literal", value: "Q", description: "\"Q\"" },
        peg$c122 = function(num) { return { type: 'set_quantize_frames', value: num.value }; },
        peg$c123 = "k",
        peg$c124 = { type: "literal", value: "k", description: "\"k\"" },
        peg$c125 = function(num) { return { type: 'set_delay', value: num.value }; },
        peg$c126 = "o",
        peg$c127 = { type: "literal", value: "o", description: "\"o\"" },
        peg$c128 = function(num) { return { type: 'set_octave', value: num.value }; },
        peg$c129 = "K",
        peg$c130 = { type: "literal", value: "K", description: "\"K\"" },
        peg$c131 = function(num) { return { type: 'transpose', value: num.value }; },
        peg$c132 = "p",
        peg$c133 = { type: "literal", value: "p", description: "\"p\"" },
        peg$c134 = function(num) { return { type: 'set_pitch', value: num.value }; },
        peg$c135 = "v",
        peg$c136 = { type: "literal", value: "v", description: "\"v\"" },
        peg$c137 = function(num) { return { type: 'set_volume', value: num.value }; },
        peg$c138 = "v+",
        peg$c139 = { type: "literal", value: "v+", description: "\"v+\"" },
        peg$c140 = function(num) { return { type: 'inc_volume', value: num }; },
        peg$c141 = "v-",
        peg$c142 = { type: "literal", value: "v-", description: "\"v-\"" },
        peg$c143 = function(num) { return { type: 'dec_volume', value: num }; },
        peg$c144 = "[",
        peg$c145 = { type: "literal", value: "[", description: "\"[\"" },
        peg$c146 = "]",
        peg$c147 = { type: "literal", value: "]", description: "\"]\"" },
        peg$c148 = function(seq, times) {
              return {
                type: 'loop',
                body: optionalList(seq),
                times: ((times && times.value) || 1)
              };
            },
        peg$c149 = "(",
        peg$c150 = { type: "literal", value: "(", description: "\"(\"" },
        peg$c151 = ")",
        peg$c152 = { type: "literal", value: ")", description: "\")\"" },
        peg$c153 = function(seq) {
              return {
                type: 'scope',
                body: optionalList(seq),
              };
            },
        peg$c154 = "r",
        peg$c155 = { type: "literal", value: "r", description: "\"r\"" },
        peg$c156 = function(length, dots) {
              return {
                type: 'rest',
                length: (length && length.value),
                dots: dots.length
              };
            },
        peg$c157 = "s",
        peg$c158 = { type: "literal", value: "s", description: "\"s\"" },
        peg$c159 = function(first, a) { return a },
        peg$c160 = function(first, rest) { return [first].concat(rest) },
        peg$c161 = "'",
        peg$c162 = { type: "literal", value: "'", description: "\"'\"" },
        peg$c163 = function(v, t) { return { type: 'repeated_number', value: v.value, times: t.value } },
        peg$c164 = function(from, to, s) { return s },
        peg$c165 = function(from, to, step) {
              return {
                type: 'interval',
                from: from.value,
                to: to.value,
                step: (step && step.value)
              };
            },
        peg$c166 = function() { return { type: 'symbol', value: text() }; },
        peg$c167 = "|",
        peg$c168 = { type: "literal", value: "|", description: "\"|\"" },
        peg$c169 = function() { return { type: 'loop_marker' }; },
        peg$c170 = function(first, v) { return v },
        peg$c171 = function(first, rest) { return [first].concat(rest); },
        peg$c172 = function(body) { return { type: 'sequence', value: optionalList(body) }; },
        peg$c173 = function(head, e) {return e},
        peg$c174 = function(head, tail) {
              var statements = [head];
              for (var i = 0; i < tail.length; i++) {
                statements = statements.concat(tail[i]);
              }
              statements = statements
                .filter(function(e) { return (e.type !== 'comment'); });
              return statements;
            },
        peg$c175 = function(body) { return { type: 'document', body: optionalList(body) }; },

        peg$currPos          = 0,
        peg$savedPos         = 0,
        peg$posDetailsCache  = [{ line: 1, column: 1, seenCR: false }],
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$resultsCache = {},

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$savedPos, peg$currPos);
    }

    function location() {
      return peg$computeLocation(peg$savedPos, peg$currPos);
    }

    function expected(description) {
      throw peg$buildException(
        null,
        [{ type: "other", description: description }],
        input.substring(peg$savedPos, peg$currPos),
        peg$computeLocation(peg$savedPos, peg$currPos)
      );
    }

    function error(message) {
      throw peg$buildException(
        message,
        null,
        input.substring(peg$savedPos, peg$currPos),
        peg$computeLocation(peg$savedPos, peg$currPos)
      );
    }

    function peg$computePosDetails(pos) {
      var details = peg$posDetailsCache[pos],
          p, ch;

      if (details) {
        return details;
      } else {
        p = pos - 1;
        while (!peg$posDetailsCache[p]) {
          p--;
        }

        details = peg$posDetailsCache[p];
        details = {
          line:   details.line,
          column: details.column,
          seenCR: details.seenCR
        };

        while (p < pos) {
          ch = input.charAt(p);
          if (ch === "\n") {
            if (!details.seenCR) { details.line++; }
            details.column = 1;
            details.seenCR = false;
          } else if (ch === "\r" || ch === "\u2028" || ch === "\u2029") {
            details.line++;
            details.column = 1;
            details.seenCR = true;
          } else {
            details.column++;
            details.seenCR = false;
          }

          p++;
        }

        peg$posDetailsCache[pos] = details;
        return details;
      }
    }

    function peg$computeLocation(startPos, endPos) {
      var startPosDetails = peg$computePosDetails(startPos),
          endPosDetails   = peg$computePosDetails(endPos);

      return {
        start: {
          offset: startPos,
          line:   startPosDetails.line,
          column: startPosDetails.column
        },
        end: {
          offset: endPos,
          line:   endPosDetails.line,
          column: endPosDetails.column
        }
      };
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildException(message, expected, found, location) {
      function cleanupExpected(expected) {
        var i = 1;

        expected.sort(function(a, b) {
          if (a.description < b.description) {
            return -1;
          } else if (a.description > b.description) {
            return 1;
          } else {
            return 0;
          }
        });

        while (i < expected.length) {
          if (expected[i - 1] === expected[i]) {
            expected.splice(i, 1);
          } else {
            i++;
          }
        }
      }

      function buildMessage(expected, found) {
        function stringEscape(s) {
          function hex(ch) { return ch.charCodeAt(0).toString(16).toUpperCase(); }

          return s
            .replace(/\\/g,   '\\\\')
            .replace(/"/g,    '\\"')
            .replace(/\x08/g, '\\b')
            .replace(/\t/g,   '\\t')
            .replace(/\n/g,   '\\n')
            .replace(/\f/g,   '\\f')
            .replace(/\r/g,   '\\r')
            .replace(/[\x00-\x07\x0B\x0E\x0F]/g, function(ch) { return '\\x0' + hex(ch); })
            .replace(/[\x10-\x1F\x80-\xFF]/g,    function(ch) { return '\\x'  + hex(ch); })
            .replace(/[\u0100-\u0FFF]/g,         function(ch) { return '\\u0' + hex(ch); })
            .replace(/[\u1000-\uFFFF]/g,         function(ch) { return '\\u'  + hex(ch); });
        }

        var expectedDescs = new Array(expected.length),
            expectedDesc, foundDesc, i;

        for (i = 0; i < expected.length; i++) {
          expectedDescs[i] = expected[i].description;
        }

        expectedDesc = expected.length > 1
          ? expectedDescs.slice(0, -1).join(", ")
              + " or "
              + expectedDescs[expected.length - 1]
          : expectedDescs[0];

        foundDesc = found ? "\"" + stringEscape(found) + "\"" : "end of input";

        return "Expected " + expectedDesc + " but " + foundDesc + " found.";
      }

      if (expected !== null) {
        cleanupExpected(expected);
      }

      return new peg$SyntaxError(
        message !== null ? message : buildMessage(expected, found),
        expected,
        found,
        location
      );
    }

    function peg$parseStart() {
      var s0, s1, s2, s3;

      var key    = peg$currPos * 57 + 0,
          cached = peg$resultsCache[key];

      if (cached) {
        peg$currPos = cached.nextPos;

        return cached.result;
      }

      s0 = peg$currPos;
      s1 = peg$parse__();
      if (s1 !== peg$FAILED) {
        s2 = peg$parseDocument();
        if (s2 !== peg$FAILED) {
          s3 = peg$parse__();
          if (s3 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c0(s2);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

      return s0;
    }

    function peg$parseSourceCharacter() {
      var s0;

      var key    = peg$currPos * 57 + 1,
          cached = peg$resultsCache[key];

      if (cached) {
        peg$currPos = cached.nextPos;

        return cached.result;
      }

      if (input.length > peg$currPos) {
        s0 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c1); }
      }

      peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

      return s0;
    }

    function peg$parseS() {
      var s0, s1;

      var key    = peg$currPos * 57 + 2,
          cached = peg$resultsCache[key];

      if (cached) {
        peg$currPos = cached.nextPos;

        return cached.result;
      }

      peg$silentFails++;
      if (input.charCodeAt(peg$currPos) === 9) {
        s0 = peg$c3;
        peg$currPos++;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c4); }
      }
      if (s0 === peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 11) {
          s0 = peg$c5;
          peg$currPos++;
        } else {
          s0 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c6); }
        }
        if (s0 === peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 12) {
            s0 = peg$c7;
            peg$currPos++;
          } else {
            s0 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c8); }
          }
          if (s0 === peg$FAILED) {
            if (input.charCodeAt(peg$currPos) === 32) {
              s0 = peg$c9;
              peg$currPos++;
            } else {
              s0 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c10); }
            }
            if (s0 === peg$FAILED) {
              if (input.charCodeAt(peg$currPos) === 160) {
                s0 = peg$c11;
                peg$currPos++;
              } else {
                s0 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c12); }
              }
              if (s0 === peg$FAILED) {
                if (input.charCodeAt(peg$currPos) === 65279) {
                  s0 = peg$c13;
                  peg$currPos++;
                } else {
                  s0 = peg$FAILED;
                  if (peg$silentFails === 0) { peg$fail(peg$c14); }
                }
              }
            }
          }
        }
      }
      peg$silentFails--;
      if (s0 === peg$FAILED) {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c2); }
      }

      peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

      return s0;
    }

    function peg$parseLineTerminator() {
      var s0;

      var key    = peg$currPos * 57 + 3,
          cached = peg$resultsCache[key];

      if (cached) {
        peg$currPos = cached.nextPos;

        return cached.result;
      }

      if (peg$c15.test(input.charAt(peg$currPos))) {
        s0 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c16); }
      }

      peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

      return s0;
    }

    function peg$parseLineTerminatorSequence() {
      var s0, s1;

      var key    = peg$currPos * 57 + 4,
          cached = peg$resultsCache[key];

      if (cached) {
        peg$currPos = cached.nextPos;

        return cached.result;
      }

      peg$silentFails++;
      if (input.charCodeAt(peg$currPos) === 10) {
        s0 = peg$c18;
        peg$currPos++;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c19); }
      }
      if (s0 === peg$FAILED) {
        if (input.substr(peg$currPos, 2) === peg$c20) {
          s0 = peg$c20;
          peg$currPos += 2;
        } else {
          s0 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c21); }
        }
        if (s0 === peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 13) {
            s0 = peg$c22;
            peg$currPos++;
          } else {
            s0 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c23); }
          }
          if (s0 === peg$FAILED) {
            if (input.charCodeAt(peg$currPos) === 8232) {
              s0 = peg$c24;
              peg$currPos++;
            } else {
              s0 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c25); }
            }
            if (s0 === peg$FAILED) {
              if (input.charCodeAt(peg$currPos) === 8233) {
                s0 = peg$c26;
                peg$currPos++;
              } else {
                s0 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c27); }
              }
            }
          }
        }
      }
      peg$silentFails--;
      if (s0 === peg$FAILED) {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c17); }
      }

      peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

      return s0;
    }

    function peg$parseComment() {
      var s0, s1;

      var key    = peg$currPos * 57 + 5,
          cached = peg$resultsCache[key];

      if (cached) {
        peg$currPos = cached.nextPos;

        return cached.result;
      }

      peg$silentFails++;
      s0 = peg$currPos;
      s1 = peg$parseMultiLineComment();
      if (s1 === peg$FAILED) {
        s1 = peg$parseSingleLineComment();
      }
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c29();
      }
      s0 = s1;
      peg$silentFails--;
      if (s0 === peg$FAILED) {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c28); }
      }

      peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

      return s0;
    }

    function peg$parseMultiLineComment() {
      var s0, s1, s2, s3, s4, s5;

      var key    = peg$currPos * 57 + 6,
          cached = peg$resultsCache[key];

      if (cached) {
        peg$currPos = cached.nextPos;

        return cached.result;
      }
